--- a/force-app/main/default/lwc/login/login.html
+++ b/force-app/main/default/lwc/login/login.html
@@ -13,16 +13,20 @@
                             <div class="container-fluid">
                                 <div class="form-group">
                                     <template if:true={message}>
-                                        {message}
+                                        <div class="error active">
+                                            {message}
+                                        </div>
                                     </template>
                                     <template if:true={error}>
-                                        {error}
+                                        <div class="error active">
+                                            {error}
+                                        </div>
                                     </template>
-                                    <lightning-input type="text" class='login' name='login' onchange={setLoginPassword} label="Login"
-                                        placeholder="Enter your username"></lightning-input>
+                                    <lightning-input type="text" class='login' name='login' onchange={setLoginPassword}
+                                        label="Login" placeholder="Enter your username"></lightning-input>
 
-                                    <lightning-input type="text" name="password" class="inpPassword" onchange={setLoginPassword}
-                                        label="Password" placeholder="Password">
+                                    <lightning-input type="text" name="password" class="inpPassword"
+                                        onchange={setLoginPassword} label="Password" placeholder="Password">
                                     </lightning-input>
                                     <div class="slds-p-top_large">
                                         <button type="submit" onclick={handleLoginUser}
